metadata-classic/objects/Bug__c.object
<CustomObject>
    <description>Custom object to define actual Thumbtack.com product bugs, as opposed to bug reports which are actual reports of (potential/possible/thought to be) bugs and act as a junction object between Case and Bug</description>
    <fields>
        <fullName>Affects__c</fullName>
        <description>Who is affected by the bug: Pros, Customers, or both.</description>
        <inlineHelpText>Who is affected by the bug: Pros, Customers, or both.</inlineHelpText>
        <label>Affects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professionals</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Agents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BugApprovalRecipient__c</fullName>
        <label>Bug Approval Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BugDescription__c</fullName>
        <description>if App Bug, include tracker link here</description>
        <inlineHelpText>if App Bug, include tracker link here</inlineHelpText>
        <label>Bug Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BugOwner__c</fullName>
        <description>This field is used for list views to display the full name of the owner.</description>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bug Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DateFixed__c</fullName>
        <description>The date on which the bug was fixed.</description>
        <inlineHelpText>The date on which the bug was fixed.</inlineHelpText>
        <label>Date Fixed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateLogged__c</fullName>
        <description>The date on which the bug was first logged.</description>
        <inlineHelpText>The date on which the bug was first logged.</inlineHelpText>
        <label>Date Logged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExistingBugs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Bugs</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InformationRequiredforBugReport__c</fullName>
        <label>Extra Info Required for Bug Report</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IssueCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueSentToJiraStatus__c</fullName>
        <label>Jira Sync Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IssueType__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRAComments__c</fullName>
        <label>JIRA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRALink__c</fullName>
        <description>The URL to the JIRA card for this bug.</description>
        <inlineHelpText>The URL to the JIRA card for this bug.</inlineHelpText>
        <label>JIRA Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JiraAttachmentList__c</fullName>
        <label>JiraAttachmentList</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JiraId__c</fullName>
        <label>Jira Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JiraStatus__c</fullName>
        <label>Jira Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>To Do</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Needs Design</fullName>
                </value>
                <value>
                    <fullName>In Code Review</fullName>
                </value>
                <value>
                    <fullName>Not Doing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer-Support</fullName>
                </value>
                <value>
                    <fullName>Customer-Support-Non-Urgent</fullName>
                </value>
                <value>
                    <fullName>Customer-Support-Semi-Urgent</fullName>
                </value>
                <value>
                    <fullName>Customer-Support-Urgent</fullName>
                </value>
                <value>
                    <fullName>Customer-Support-Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highest / Emergency</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Lowest / Only track</fullName>
                </value>
                <value>
                    <fullName>Untriaged</fullName>
                    <default>true</default>
                    <label>Untriaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>CASE(Project__c, 
&apos;Bowtie (iOS Customer App) (BT)&apos;,&apos;10203&apos;,
&apos;Business Applications (SYS)&apos;,&apos;13702&apos;,
&apos;Customer Growth (GR)&apos;,&apos;10806&apos;,
&apos;Customer Project Experience (CPX)&apos;,&apos;13708&apos;,
&apos;Daft (Android Pro App) (DAFT)&apos;,&apos;11100&apos;,
&apos;Design Systems (DS)&apos;,&apos;13707&apos;,
&apos;First Contact (FC)&apos;,&apos;13709&apos;,
&apos;Marketplace (IR)&apos;,&apos;13200&apos;,
&apos;Marketplace Trust &amp; Safety (MI)&apos;,&apos;12900&apos;,
&apos;Needs Triage (TT)&apos;,&apos;10100&apos;,
&apos;Payments (PAY)&apos;,&apos;12400&apos;,
&apos;Pro Growth (PROG)&apos;,&apos;13714&apos;,
&apos;Pro Project Experience (PPX)&apos;,&apos;13711&apos;,
&apos;Punk (Android Consumer App) (PUNK)&apos;,&apos;12700&apos;,
&apos;Reach &amp; Reporting (RR)&apos;,&apos;13712&apos;,
&apos;StoreFurrront (STOR)&apos;,&apos;13713&apos;,
&apos;Technical Infrastructure (TI)&apos;,&apos;13701&apos;,
&apos;Tophat (TH)&apos;,&apos;11000&apos;,
&apos;Wingtip (iOS Pro App) (WT)&apos;,&apos;10204&apos;,
&apos;Customer Experience (PCX)&apos;,&apos;11400&apos;,
&apos;Data Platform (DP)&apos;,&apos;10000&apos;,
&apos;Foundation (FN)&apos;,&apos;10400&apos;,
&apos;Front-End Engineering (FE)&apos;,&apos;10800&apos;,
&apos;Marketplace Mechanics (MM)&apos;,&apos;10500&apos;,
&apos;Monetization (M10N)&apos;,&apos;12800&apos;,
&apos;Pro Success (PS)&apos;,&apos;13000&apos;,
&apos;Pro Tools (PT)&apos;,&apos;13100&apos;,
&apos;Procaptivate (PRO)&apos;,&apos;10900&apos;,
&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bowtie (iOS Customer App) (BT)</fullName>
                </value>
                <value>
                    <fullName>Customer Growth (GR)</fullName>
                </value>
                <value>
                    <fullName>Customer Project Experience (CPX)</fullName>
                </value>
                <value>
                    <fullName>Daft (Android Pro App) (DAFT)</fullName>
                </value>
                <value>
                    <fullName>Design Systems (DS)</fullName>
                </value>
                <value>
                    <fullName>First Contact (FC)</fullName>
                </value>
                <value>
                    <fullName>Marketplace (IR)</fullName>
                </value>
                <value>
                    <fullName>Marketplace Trust &amp; Safety (MI)</fullName>
                </value>
                <value>
                    <fullName>Needs Triage (TT)</fullName>
                </value>
                <value>
                    <fullName>Payments (PAY)</fullName>
                </value>
                <value>
                    <fullName>Pro Growth (PROG)</fullName>
                </value>
                <value>
                    <fullName>Pro Project Experience (PPX)</fullName>
                </value>
                <value>
                    <fullName>Punk (Android Consumer App) (PUNK)</fullName>
                </value>
                <value>
                    <fullName>Reach &amp; Reporting (RR)</fullName>
                </value>
                <value>
                    <fullName>StoreFurrront (STOR)</fullName>
                </value>
                <value>
                    <fullName>Technical Infrastructure (TI)</fullName>
                </value>
                <value>
                    <fullName>Tophat (TH)</fullName>
                </value>
                <value>
                    <fullName>Wingtip (iOS Pro App) (WT)</fullName>
                </value>
                <value>
                    <fullName>***Below are No Longer in Use***</fullName>
                </value>
                <value>
                    <fullName>Customer Experience (PCX)</fullName>
                </value>
                <value>
                    <fullName>Data Platform (DP)</fullName>
                </value>
                <value>
                    <fullName>Foundation (FN)</fullName>
                </value>
                <value>
                    <fullName>Front-End Engineering (FE)</fullName>
                </value>
                <value>
                    <fullName>Marketplace Mechanics (MM)</fullName>
                </value>
                <value>
                    <fullName>Monetization (M10N)</fullName>
                </value>
                <value>
                    <fullName>Pro Success (PS)</fullName>
                </value>
                <value>
                    <fullName>Pro Tools (PT)</fullName>
                </value>
                <value>
                    <fullName>Procaptivate (PRO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TackLabels__c</fullName>
        <inlineHelpText>if any of these are chosen, a JIRA issue will not be created</inlineHelpText>
        <label>Tack Labels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Bug</fullName>
                </value>
                <value>
                    <fullName>Tracker Bug</fullName>
                </value>
                <value>
                    <fullName>Polish - Suggestion</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Eng Won’t Fix Tracker</fullName>
                </value>
                <value>
                    <fullName>Polish - Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TroubleshootingStepstoTake__c</fullName>
        <label>Extra Troubleshooting Steps to Take</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>The Level of Urgency assigned to this Bug.</description>
        <inlineHelpText>The Level of Urgency assigned to this Bug.</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Urgent</fullName>
                </value>
                <value>
                    <fullName>Semi-Urgent</fullName>
                </value>
                <value>
                    <fullName>Urgent/Severe</fullName>
                </value>
                <value>
                    <fullName>Android Customer App (Punk)</fullName>
                </value>
                <value>
                    <fullName>Android Pro App (Daft)</fullName>
                </value>
                <value>
                    <fullName>iOS Customer App (BowTie)</fullName>
                </value>
                <value>
                    <fullName>iOS Pro App (WingTip)</fullName>
                </value>
                <value>
                    <fullName>Polish - Approved</fullName>
                </value>
                <value>
                    <fullName>Polish - Suggestion</fullName>
                </value>
                <value>
                    <fullName>Not a Bug</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Tracker Bug</fullName>
                </value>
                <value>
                    <fullName>Eng Won&apos;t Fix Tracker</fullName>
                </value>
                <value>
                    <fullName>Instant Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserCode__c</fullName>
        <formula>IF( 
ISPICKVAL(User__c, &apos;Other&apos;), &apos;SalesforceSystemIntegration&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Alyssa Wilson&apos;), &apos;awilson&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Deirdre Galluzzo&apos;), &apos;deirdre&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Kyle Thorup&apos;), &apos;kyle&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Kristine Ann Pielago&apos;), &apos;krpielago&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Christina Caacoy&apos;), &apos;crcaacoy&apos;, 
IF( 
ISPICKVAL(User__c, &apos;Jeff Oviatt&apos;), &apos;joviatt&apos; 
,&apos;SalesforceSystemIntegration&apos; )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alyssa Wilson</fullName>
                </value>
                <value>
                    <fullName>Kevin Giltz</fullName>
                </value>
                <value>
                    <fullName>Deirdre Galluzzo</fullName>
                </value>
                <value>
                    <fullName>Kyle Thorup</fullName>
                </value>
                <value>
                    <fullName>Kristine Ann Pielago</fullName>
                </value>
                <value>
                    <fullName>Christina Caacoy</fullName>
                </value>
                <value>
                    <fullName>Jeff Oviatt</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WatchersAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Watchers Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Bug</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllFixed</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DateFixed__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Fixed</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUnresolved</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DateFixed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Urgency__c</field>
            <operation>notEqual</operation>
            <value>Polish - Approved,Polish - Suggestion</value>
        </filters>
        <label>All Unresolved</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUntriaged</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>Untriaged</value>
        </filters>
        <label>All Untriaged</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bowtie_iOS_Customer_App_BT</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Bowtie (iOS Customer App) (BT)</value>
        </filters>
        <label>Bowtie (iOS Customer App) (BT)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bugs_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>Project__c</columns>
        <columns>Priority__c</columns>
        <columns>TackLabels__c</columns>
        <columns>BugDescription__c</columns>
        <columns>BugOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Awaiting_Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bugs Awaiting Approval</label>
        <sharedTo>
            <group>BugsTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerGrowthGR</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Customer Growth (GR)</value>
        </filters>
        <label>Customer Growth (GR)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerProjectExperienceCPX</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Customer Project Experience (CPX)</value>
        </filters>
        <label>Customer Project Experience (CPX)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Experience_PCX</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Customer Experience (PCX)</value>
        </filters>
        <label>Customer Experience (PCX)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Daft_Android_Pro_App_DAFT</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Daft (Android Pro App) (DAFT)</value>
        </filters>
        <label>Daft (Android Pro App) (DAFT)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Platform_DP</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Data Platform (DP)</value>
        </filters>
        <label>Data Platform (DP)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DesignSystemsDS</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Design Systems (DS)</value>
        </filters>
        <label>Design Systems (DS)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eng_Won_t_Fix_Tracker</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>Project__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TackLabels__c</field>
            <operation>equals</operation>
            <value>Eng Won’t Fix Tracker</value>
        </filters>
        <label>Eng Won’t Fix Tracker</label>
    </listViews>
    <listViews>
        <fullName>FirstContactFC</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>First Contact (FC)</value>
        </filters>
        <label>First Contact (FC)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Foundation_FN</fullName>
        <columns>NAME</columns>
        <columns>DateLogged__c</columns>
        <columns>DateFixed__c</columns>
        <columns>Project__c</columns>
        <columns>TackLabels__c</columns>
        <columns>Affects__c</columns>
        <columns>BugDescription__c</columns>
        <columns>JIRALink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Foundation (FN)</value>
        </filters>
        <label>Foundation (FN)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Bug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ProjectValidationRule</fullName>
        <active>true</active>
        <description>Do not allow the divider value to be selected as a valid project.</description>
        <errorConditionFormula>ISPICKVAL(Project__c, &apos;***Below are No Longer in Use***&apos;)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Please select a valid project.</errorMessage>
    </validationRules>
</CustomObject>